// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render areas.content 1`] = `
<section
  className="ant-layout {}"
  id="areas.content"
>
  <div
    style={
      Object {
        "border": "1px solid red",
        "padding": 10,
      }
    }
  >
    content
  </div>
</section>
`;

exports[`Render default 1`] = `
<section
  className="ant-layout {}"
  id="default"
>
  <div
    style={
      Object {
        "border": "1px solid red",
        "padding": 10,
      }
    }
  >
    content
  </div>
</section>
`;

exports[`Render properties.style 1`] = `
<section
  className="ant-layout {\\"style\\":{\\"border\\":\\"1px solid blue\\"}}"
  id="properties.style"
>
  <div
    style={
      Object {
        "border": "1px solid red",
        "padding": 10,
      }
    }
  >
    content
  </div>
</section>
`;

exports[`Test Schema areas.content 1`] = `true`;

exports[`Test Schema areas.content 2`] = `null`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.style 1`] = `true`;

exports[`Test Schema properties.style 2`] = `null`;
